added documentation to courseRoutes
