# onboarder/routes/admin/courseRoutes.js
@@ -39,9 +39,6 @@ const {
  *                              description:
  *                                  type: string
  *                                  required: false
- *                              completionDate:
- *                                  type: string
- *                                  required: true
  *          responses:
  *              201: 
  *                  description: Successful response, new course created
@@ -52,6 +49,36 @@ const {
  *              500: 
  *                  description: Internal server error
 */
+/**
+ * @api {post} /api/admin/courses Create course
+ * @apiName Create course
+ * @apiPermission admin
+ * @apiGroup Courses
+ * @apiDescription Create a new course with given details
+ *
+ * @apiBody {String} title course's title.
+ * @apiBody {String} description course's description.
+ * @apiBody {String} link course's link.
+ *
+ * @apiSuccess {Object} course The created course object.
+ * @apiError BadRequest bad request
+ * @apiError Unauthorzied unauthorized
+ * @apiError InternalServerError internal server error
+ * 
+ * @apiVersion 1.0.0
+ */
+/**
+ * @api {get} /api/admin/courses List courses
+ * @apiName List courses
+ * @apiPermission admin
+ * @apiGroup Courses
+ * @apiDescription Get all courses
+ *
+ * @apiSuccess {Array} courses Array of all course objects.
+ * @apiError InternalServerError internal server error
+ * 
+ * @apiVersion 1.0.0
+ */
 router.route('/')
     .post(createCourse)
     .get(listCourses);
@@ -129,6 +156,57 @@ router.route('/')
  *              500:
  *                  description: Unable to delete course
 */
+/**
+ * @api {get} /api/admin/courses/:id Get course
+ * @apiName Get course
+ * @apiPermission admin
+ * @apiGroup Courses
+ * @apiDescription Gets course with given id
+ *
+ * @apiParam {String} id ID of course.
+ *
+ * @apiSuccess {Object} course Course object in given id.
+ * @apiError Unauthorized unauthorized
+ * @apiError NotFound Course with given id not found
+ * @apiError InternalServerError internal server error
+ * 
+ * @apiVersion 1.0.0
+ */
+/**
+ * @api {put} /api/admin/courses/:id Update course
+ * @apiName Update course
+ * @apiPermission admin
+ * @apiGroup Courses
+ * @apiDescription Update course details for given id
+ *
+ * @apiParam {String} id Course id.
+ * @apiBody {String} title Updated (or existing) title
+ * @apiBody {String} description Updated (or existing) course description
+ * @apiBody {String} link Updated (or existing) course link
+ *
+ * @apiSuccess {Object} course Course object.
+ * @apiError Unauthorized unauthorized
+ * @apiError NotFound could not find course with given id
+ * @apiError InternalServerError internal server error
+ * 
+ * @apiVersion 1.0.0
+ */
+/**
+ * @api {delete} /api/admin/courses/:id Delete course
+ * @apiName Delete Course
+ * @apiPermission admin
+ * @apiGroup Courses
+ * @apiDescription Delete course with given id
+ *
+ * @apiParam {String} id Course id.
+ *
+ * @apiSuccess {Object} course Deleted course object.
+ * @apiError Unauthorized unauthorized
+ * @apiError NotFound could not find course with given id
+ * @apiError InternalServerError internal server error
+ * 
+ * @apiVersion 1.0.0
+ */
 router.route('/:id')
     .get(getCourseById)
     .put(updateCourseById)
